--- a/css/styles.css
+++ b/css/styles.css
@@ -281,3 +281,13 @@ h3 {
 .footer {
   text-align: center;
 }
+
+.mensaje {
+  line-height: 1.5;
+}
+
+.mensaje a {
+  text-decoration: none;
+  font-weight: bold;
+  align-items: center;
+}
