--- a/css/styles.css
+++ b/css/styles.css
@@ -9,6 +9,7 @@ determinado tipo con padres de un determinado tipo (por ej h1 span{} se aplicari
 el que le aporta los estilos es el mas especifico
 (ver pdf Especifidad css 05)*/
 
+/*Se pone : cuando el selector no existe en html, es como para definir cosas para css como colores por ej*/
 :root {
   --blanco: #ffffff;
   --oscuro: #212121;
@@ -106,15 +107,6 @@ h3 {
 
 .boton:hover {
   cursor: pointer;
-  animation-name: shake;
-      -webkit-animation-name: shake;
-      -moz-animation-name: shake;
-  animation-duration: 1s;
-      -webkit-animation-duration: 1s;
-      -moz-animation-duration: 1s;
-  animation-iteration-count: infinite;
-      -webkit-animation-iteration-count: infinite;
-      -moz-animation-iteration-count: infinite;
 }
 
 /* Titulos */
@@ -181,11 +173,13 @@ h3 {
   color: var(--oscuro);
 }
 
-.principal a:hover{
-  box-shadow: 0 8px 8px 0 #000000,0 8px 8px 0 #000000;
-  transform: scale3d(1.5, 1.5, 0.3);
-      -webkit-transform: scale3d(1.5, 1.5, 0.3);
-      -moz-transform: scale3d(1.5, 1.5, 0.3);
+@media (min-width: 780px) {
+  .principal a:hover{
+    box-shadow: 0 8px 8px 0 #000000,0 8px 8px 0 #000000;
+    transform: scale3d(1.5, 1.5, 0.3);
+        -webkit-transform: scale3d(1.5, 1.5, 0.3);
+        -moz-transform: scale3d(1.5, 1.5, 0.3);
+  }
 }
 
 /* Hero */
@@ -335,18 +329,3 @@ h3 {
 .mensaje a:hover{
   background-color: var(--grisClaro);
 }
-
-  @keyframes shake {
-      0%  {transform: translate(1px, 1px) rotate(0deg);}
-      10% {transform: translate(-1px, -2px) rotate(-1deg);}
-      20% {transform: translate(-3px, 0px) rotate(1deg);}
-      30% {transform: translate(3px, 2px) rotate(0deg);}
-      40% {transform: translate(1px, -1px) rotate(1deg);}
-      50% {transform: translate(-1px, 2px) rotate(-1deg);}
-      60% {transform: translate(-3px, 1px) rotate(0deg);}
-      70% {transform: translate(3px, 1px) rotate(-1deg);}
-      80% {transform: translate(-1px, -1px) rotate(1deg);}
-      90% {transform: translate(1px, 2px) rotate(0deg);}
-      100% {transform: translate(1px, -2px) rotate(-1deg);}
-  }
-            
