--- a/css/styles.css
+++ b/css/styles.css
@@ -105,8 +105,18 @@ h3 {
   }
 }
 
+/*Animacion de vibrar de los botones*/
 .boton:hover {
   cursor: pointer;
+  animation-name: shake;
+  -webkit-animation-name: shake;
+  -moz-animation-name: shake;
+  animation-duration: 1s;
+  -webkit-animation-duration: 1s;
+  -moz-animation-duration: 1s;
+  animation-iteration-count: infinite;
+  -webkit-animation-iteration-count: infinite;
+  -moz-animation-iteration-count: infinite;
 }
 
 /* Titulos */
@@ -311,21 +321,68 @@ h3 {
   text-align: center;
 }
 
-.mensaje {
-  line-height: 1.5;
+/*Parte de acerca de mi*/
+.contenedor-yo {
+  min-width: 18rem;
+  height: 18rem;
+  position: relative;
+  overflow: hidden;
+  border-radius: 50%;
 }
 
-.mensaje a {
-  text-decoration: none;
-  font-weight: bold;
+.contenedor-yo img {
+  display: inline;
+  margin: 0 auto;
+  height: 100%;
+  width: auto;
+}
+
+.mensaje {
+  line-height: 1.5;
+  align-items: center;
   justify-content: center;
 }
 
-.mensaje svg{
-  display: inline-block;
-  vertical-align: middle;
+@media (max-width: 780px) {
+ .mensaje {
+    flex-direction: column;
+ }
+}
+
+.mensaje p  {
+  padding-left: 3rem;
+  font-weight: bold;
+}
+
+/*Parte de enlaces a git y linkedin*/
+.enlaces {
+  justify-content: space-evenly;
+}
+.enlaces div {
+  align-items: center;
+}
+.enlaces a {
+  margin-left: 5px;
+  text-decoration: none;
+  font-weight: bold;
 }
 
 .mensaje a:hover{
   background-color: var(--grisClaro);
 }
+
+/*para el shake de los botones*/
+@keyframes shake {
+  0%  {transform: translate(1px, 1px) rotate(0deg);}
+  10% {transform: translate(-1px, -2px) rotate(-1deg);}
+  20% {transform: translate(-3px, 0px) rotate(1deg);}
+  30% {transform: translate(3px, 2px) rotate(0deg);}
+  40% {transform: translate(1px, -1px) rotate(1deg);}
+  50% {transform: translate(-1px, 2px) rotate(-1deg);}
+  60% {transform: translate(-3px, 1px) rotate(0deg);}
+  70% {transform: translate(3px, 1px) rotate(-1deg);}
+  80% {transform: translate(-1px, -1px) rotate(1deg);}
+  90% {transform: translate(1px, 2px) rotate(0deg);}
+  100% {transform: translate(1px, -2px) rotate(-1deg);}
+}
+
