--- a/css/styles.css
+++ b/css/styles.css
@@ -157,8 +157,14 @@ h3 {
 .principal {
   display: flex;
   flex-direction: column;
-  align-items: center;
 }
+@media (max-width: 780px) {
+  .principal a {
+    width: 100%;
+    text-align: center;
+  }
+}
+
 
 @media (min-width: 780px) {
   .principal {
@@ -181,6 +187,9 @@ h3 {
 .principal a:hover, .boton:hover {
   background-color: var(--primario);
   color: var(--oscuro);
+  transform: translatey(-10px);
+      -webkit-transform: translatey(-10px);
+      -moz-transform: translatey(-10px);
 }
 
 @media (min-width: 780px) {
@@ -374,6 +383,7 @@ h3 {
   background-color: var(--grisClaro);
 }
 
+/*Animaciones*/
 /*para el shake de los botones*/
 @keyframes shake {
   0%  {transform: translate(1px, 1px) rotate(0deg);}
@@ -389,3 +399,13 @@ h3 {
   100% {transform: translate(1px, -2px) rotate(-1deg);}
 }
 
+/*Para el levantar del nav*/
+
+              
+.transUp{
+  
+}
+.transUp:hover{
+  
+}
+            
